--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,9 @@
   "token" : "",
   "rank" : "Gestation",
   "play" : "help pour avoir de l'aide",
-  "prefix" : "1",
+  "invite" : "https://discordapp.com/oauth2/authorize?client_id=382201356179472384&scope=bot&permissions=20065280",
+  "gitHub" : "https://github.com/VictorHachard/DiscordBot",
+  "prefix" : "",
   "embedColor" : "#318EEA",
   "botChannel" : "bot",
   "botCommander" : "bot-commander",
